# src/server/graphql/resolvers/index.ts
@@ -1,0 +1,5 @@
+import { seasonSummary } from './seasonSummary';
+
+const resolvers = { seasonSummary };
+
+export default resolvers;
