# src/server/rest/resolvers/index.ts
@@ -1,0 +1,11 @@
+import { getConstructorStandings } from './getConstructorStandings';
+import { getDriverStandings } from './getDriverStandings';
+import { getSeasonSummary } from './getSeasonSummary';
+
+const resolvers = {
+  getConstructorStandings,
+  getDriverStandings,
+  getSeasonSummary
+};
+
+export default resolvers;
